# cognee

./: .coderabbit.yaml  .dockerignore  .dockerignore.ci  .editorconfig  .env.example  .env.template  .gitattributes  .gitguardian.yml  .gitignore  .lycheeignore  .mergify.yml  .pre-commit-config.yaml  .pylintrc  .yamllint  1gb_nonparallel_cognee.py  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_QUALITY_REVIEW.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  CONTRIBUTORS.md  CSV_INGESTION_GUIDE.md  CUSTOM_LABELS.md  DCO.md  DOCKERFILE_CHANGES.md  DOCKERFILE_COMPARISON.md  DOCKER_QUICKSTART.md  Demo_graph.ipynb  Dockerfile  Dockerfile-old  Dockerfile-vanilla  Dockerfile.ci  Dockerfile.modal  Dockerfile_modal  GEMINI.md  HEALTH_CHECK_IMPLEMENTATION.md  HEALTH_CHECK_SUMMARY.md  (+103 more)
cognee-mcp/: .dockerignore  .env.example  API_TOKEN_SETUP.md  DOCKER.md  Dockerfile  Dockerfile.optimized  QUICKSTART.md  README.md  entrypoint.optimized.sh  entrypoint.sh  openapi.json  pyproject.toml  pytest.ini  run_docker_tests.sh  run_mcp_tool_tests.sh  smithery.yaml  test-docker.sh  test_mcp_init.py
cognee-mcp-simple/: README.md  pyproject.toml
cognee-mcp-simple/src/: __init__.py  server.py
cognee-mcp/apps-src/: package-lock.json  package.json  tsconfig.json  visualize-graph.html  vite.config.ts
cognee-mcp/apps-src/src/: design.css  main.tsx
cognee-mcp/cognee-api-client/: README.md  pyproject.toml
cognee-mcp/cognee-api-client/cognee_api_client/: __init__.py
cognee-mcp/cognee-api-client/cognee_api_client/models/: __init__.py  add_api_v1_add_post_response_add_api_v1_add_post.py  body_add_api_v1_add_post.py  body_auth_cookie_login_api_v1_auth_login_post.py  body_reset_forgot_password_api_v1_auth_forgot_password_post.py  body_reset_reset_password_api_v1_auth_reset_password_post.py  body_update_api_v1_update_patch.py  body_verify_request_token_api_v1_auth_request_verify_token_post.py  (+63 more)
cognee-mcp/cognee_mcp/: __init__.py  server.py
cognee-mcp/mcpcognee/: __init__.py  __main__.py  server.py
cognee-mcp/src/: __init__.py  auth_context.py  client.py  cognee_client.py  config.py  dependencies.py  error_envelope.py  health.py  retrieval_utils.py  run_cognee_database_setup.py  server.py  server_utils.py  strip_vectors.py  test_client.py  test_skills_resources_prompts.py  tools.py  transport.py  x402_middleware.py
cognee-mcp/src/app_bundles/: visualize-graph.html
cognee-mcp/src/clients/: __init__.py  cognee_client.py
cognee-mcp/src/codingagents/: coding_rule_associations.py
cognee-mcp/src/models/: MCPServerCommandConfig.py  MCPServerUrlConfig.py  __init__.py
cognee-mcp/src/shared/: __init__.py  context.py
cognee-mcp/src/tools/: __init__.py  clear_registry.py  codify.py  codify_status.py  cognee_add_developer_rules.py  cognify.py  cognify_status.py  delete.py  find_mcp_server.py  get_developer_rules.py  list_data.py  list_mcp_servers.py  prune.py  remember_mcp_server.py  save_interaction.py  search.py  utils.py
cognee-mcp/src/utils/: __init__.py  context.py
cognee-mcp/tests/: conftest.py  requirements-test.txt  test_docker_image.py  test_error_envelope.py  test_mcp_docker_tools.py  test_mcp_server.py  test_mcp_server_hardening.py  test_mcp_tools.py  test_mcp_tools_manual.py  test_migration_ordering.py  test_per_request_token.py  test_x402_middleware.py
cognee-mcp/tests/tools/: test_basic_tools.py  test_cognify.py  test_list_data.py  test_search.py
cognee-telegram/: .env.template  README.md  pyproject.toml
cognee-telegram/src/cognee_telegram/: __init__.py  __main__.py  adapter.py  bot.py  citations.py  config.py  scoping.py
cognee-telegram/tests/: conftest.py  test_adapter.py  test_bot.py  test_citations.py  test_config.py  test_scoping.py
cognee/complex_demos/association_layer_demo/: README.md  pyproject.toml
cognee/complex_demos/crewai_demo/: README  pyproject.toml
cognee_demo/: pyproject.toml
evals/src/: create_benchmark_summary_json.py  hotpotqa_instances.py  pyproject.toml  run_cross_benchmark_analysis.py  visualize_benchmarks.py
evals/src/analysis/: analyze_results.py  analyze_single_benchmark.py  get_results.py  process_results.py
evals/src/helpers/: convert_metrics.py  modal_evaluate_answers.py
evals/src/modal_apps/: modal_evaluate_qa.py  modal_image.py  modal_qa_benchmark_cognee.py  modal_qa_benchmark_graphiti.py  modal_qa_benchmark_lightrag.py  modal_qa_benchmark_mem0.py  test_neo4j_server.py
evals/src/qa/: qa_benchmark_base.py  qa_benchmark_cognee.py  qa_benchmark_graphiti.py  qa_benchmark_lightrag.py  qa_benchmark_mem0.py  run_graphiti_benchmark.py
examples/python/latest_ai_development/: README.md  USAGE_GUIDE.md  pyproject.toml  report.md  test_cognee_tools.py
level_2/: .env  Readme.md  api.py  docker-compose.yml  entrypoint.sh  fetch_secret.py  level_2_pdf_vectorstore__dlt_contracts.py  pyproject.toml  utils.py
level_2/.github/workflows/: cd.yaml  cd_prd.yaml
level_2/auth/: auth.py
level_2/auth/cognito/: JWTBearer.py
level_2/chunkers/: chunkers.py
level_2/database/: database.py
level_2/models/: memory.py  memory_graph.py  metadatas.py  operation.py  sessions.py  test_output.py  test_set.py  user.py
level_2/modulators/: modulators.py
level_2/schema/semantic/: semantic_schema.py
level_2/scripts/: create_database.py
level_2/shared/: chunk_strategy.py
level_2/tests/: crud_test.py
level_2/vectordb/: basevectordb.py  vectordb.py
level_4/: .env.template  Dockerfile  api.py  docker-compose.yml  main.py  pyproject.toml
level_4/cognitive_architecture/: api.py  config.py  create_database.py  openai_tools.py  utils.py  vectorstore_manager.py
level_4/cognitive_architecture/classifiers/: classifier.py
level_4/cognitive_architecture/database/: create_database.py  database_crud.py
level_4/cognitive_architecture/graph_database/: graph.py
level_4/cognitive_architecture/models/: docs.py  memory.py  metadatas.py  operation.py  sessions.py  testoutput.py  testset.py  user.py
level_4/cognitive_architecture/scripts/: create_database.py
level_4/cognitive_architecture/vectordb/: basevectordb.py  vectordb.py
(+6262 files in other folders)
