[project]
name = "cognee"

version = "0.2.4"
description = "Cognee - is a library for enriching LLM context with a semantic layer for better understanding and reasoning."
authors = [{ name = "Vasilije Markovic" }, { name = "Boris Arzentar" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "openai>=1.80.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.2.1",
    "typing_extensions>=4.12.2",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    # Note: New s3fs and boto3 versions don't work well together
    # Always use compatible fixed versions of these two dependencies
    "s3fs[boto3]==2025.3.2",
    "sqlalchemy>=2.0.39",
    "aiosqlite>=0.20.0",
    "tiktoken>=0.8.0",
    "litellm>=1.71.0",
    "instructor>=1.9.1",
    "langfuse>=2.32.0",
    "filetype>=1.2.0",
    "aiohttp>=3.11.14",
    "aiofiles>=23.2.1",
    "rdflib>=7.1.4",
    "pypdf>=4.1.0",
    "jinja2>=3.1.3",
    "matplotlib>=3.8.3",
    "networkx>=3.4.2",
    "lancedb>=0.24.0",
    "alembic>=1.13.3",
    "pre-commit>=4.0.1",
    "scikit-learn>=1.6.1",
    "limits>=4.4.1",
    "fastapi>=0.115.7",
    "python-multipart>=0.0.20",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "dlt[sqlalchemy]>=1.9.0",
    "sentry-sdk[fastapi]>=2.9.0",
    "structlog>=25.2.0",
    "baml-py>=0.201.0",
    "pympler>=1.1",
    "onnxruntime>=1.0.0",
    "pylance>=0.22.0",
    "kuzu==0.11.0",
    "python-magic-bin; platform_system == 'Windows'", # Only needed for Windows
]

[project.optional-dependencies]
api = ["uvicorn>=0.34.0", "gunicorn>=20.1.0", "websockets>=15.0.1"]
distributed = ["modal>=1.0.5"]

neo4j = ["neo4j>=5.28.0"]
neptune = ["langchain_aws>=0.2.22"]
postgres = ["psycopg2>=2.9.10", "pgvector>=0.3.5", "asyncpg>=0.30.0"]
postgres-binary = [
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.5",
    "asyncpg>=0.30.0",
]
notebook = ["notebook>=7.1.0"]
langchain = ["langsmith>=0.2.3", "langchain_text_splitters>=0.3.2"]
llama-index = ["llama-index-core>=0.12.11"]
gemini = ["google-generativeai>=0.8.4"]
huggingface = ["transformers>=4.46.3"]
ollama = ["transformers>=4.46.3"]
mistral = ["mistral-common>=1.5.2"]
anthropic = ["anthropic>=0.26.1"]
deepeval = ["deepeval>=3.0.1"]
posthog = ["posthog>=3.5.0"]
falkordb = ["falkordb>=1.0.9"]
groq = ["groq>=0.8.0"]
chromadb = ["chromadb>=0.3.0", "pypika==0.48.8"]
docs = [
    "unstructured[csv, doc, docx, epub, md, odt, org, ppt, pptx, rst, rtf, tsv, xlsx]>=0.18.1",
]
codegraph = [
    "fastembed; python_version < '3.13'",
    "transformers>=4.46.3",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.6",
]
evals = ["plotly>=6.0.0", "gdown>=5.2.0"]
gui = ["pyside6>=6.8.3", "qasync>=0.27.1"]
graphiti = ["graphiti-core>=0.7.0"]
# Note: New s3fs and boto3 versions don't work well together
# Always use comaptible fixed versions of these two dependencies
aws = ["s3fs[boto3]==2025.3.2"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.21.1",
    "coverage>=7.3.2",
    "mypy>=1.7.1",
    "notebook>=7.1.0",
    "deptry>=0.20.0",
    "pylint>=3.0.3",
    "ruff>=0.9.2",
    "tweepy>=4.14.0",
    "gitpython>=3.1.43",
    "mkdocs-material>=9.5.42",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=0.26.2",
]
debug = ["debugpy>=1.8.9"]

[project.urls]
Homepage = "https://www.cognee.ai"
Repository = "https://github.com/topoteretes/cognee"

[project.scripts]
cognee = "cognee.cli._cognee:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/bin",
    "/dist",
    "/.data",
    "/.github",
    "/alembic",
    "/deployment",
    "/cognee-mcp",
    "/cognee-frontend",
    "/examples",
    "/helm",
    "/licenses",
    "/logs",
    "/notebooks",
    "/profiling",
    "/tests",
    "/tools",
]

[tool.hatch.build.targets.wheel]
packages = ["cognee", "distributed"]

[tool.ruff]
line-length = 100
exclude = [
    "migrations/",                             # Ignore migrations directory
    "notebooks/",                              # Ignore notebook files
    "build/",                                  # Ignore build directory
    "cognee/pipelines.py",
    "cognee/modules/users/models/Group.py",
    "cognee/modules/users/models/ACL.py",
    "cognee/modules/pipelines/models/Task.py",
    "cognee/modules/data/models/Dataset.py",
]

[tool.ruff.lint]
ignore = ["F401"]
