[project]
name = "cognee-mcp"
version = "0.4.0"
description = "Cognee MCP server"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # For local cognee repo usage remove comment bellow and add absolute path to cognee. Then run `uv sync --reinstall` in the mcp folder on local cognee changes.
    #"cognee[postgres-binary,codegraph,gemini,huggingface,docs,neo4j] @ file:/Users/igorilic/Desktop/cognee",
    # MCP server is an API client only - it doesn't need heavy document parsing libraries
    # Removed extras to reduce image from 4GB to ~600MB:
    #   - postgres-binary (~100MB) - MCP uses API, not direct DB access
    #   - docs (~2-3GB!) - includes unstructured with ALL parsers (PDF, OCR, MS Office, etc.)
    #   - neo4j (~50MB) - MCP uses API, not direct graph DB access
    "cognee==0.3.7",  # Base package only - saves ~3GB!
    "fastmcp>=2.10.0,<3.0.0",
    "mcp>=1.12.0,<2.0.0",
    "uv>=0.6.3,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

authors = [
    { name = "Boris Arzentar", email = "boris@topoteretes.com" },
    { name = "Igor Ilic", email = "igor@topoteretes.com" },
    { name = "Laszlo Hajdu", email = "laszlo@topoteretes.com" },
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.12,<2.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
cognee = "src:main"
cognee-mcp = "src:main_mcp"
