[project]
name = "crewai_demo"
version = "0.1.0"
description = "Cognee crewAI demo"
authors = [{ name = "Laszlo Hajdu", email = "laszlo@topoteretes.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
run_crew = "association_layer_demo.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
